--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -55,8 +55,8 @@ body {
   width: 100%;
 }
 html {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
+  /* -webkit-touch-callout: none; */
+  /* -webkit-user-select: none; */
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
