상품소개 정보 수정 및 전체상품 탭추가

--- a/src/css/sub.css
+++ b/src/css/sub.css
@@ -1005,6 +1005,9 @@ table .center{
 .product .tab-title li{
     width: 290px;
 }
+.product .tab-con03 td{
+    text-align: center;
+}
 
 /* 주요고객사 */
 .customer .visual {
