--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -389,6 +389,72 @@
     display: none;
 }
 
+/* policy popup */
+.dimd {
+    height: 100%;
+    overflow: hidden;
+}
+
+.pop-wrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    transition: .3s ease;
+    z-index: 200;
+}
+.pop-wrap .popup{
+    display: flex;
+    flex-direction: column;
+    width: 552px;
+    height: 80%;
+    padding: 40px;
+    border-radius: 10px;
+    background: #fff;
+    color: #999;
+    line-height: 1.5;
+}
+.pop-wrap .popup h2{
+    margin-bottom: 30px;
+    font-size: 24px;
+    color: #000;
+}
+.pop-wrap .popup .policy{
+    overflow: auto;
+    height: 100%;
+    padding-right: 10px;
+    margin-right:-27px;
+    margin-bottom: 40px;
+}
+.pop-wrap .popup h3{
+    margin-top: 30px;
+    font-weight: 400;
+}
+.pop-wrap .popup p{
+    margin-bottom: 14px;
+}
+.pop-wrap .popup li{
+    margin-bottom: 11px;
+}
+.pop-wrap .popup li li{
+    margin-bottom: 0;
+}
+.pop-wrap .popup .btn-close-pop{
+    width: 100%;
+    height: 50px;
+    border: 0;
+    background: #000;
+    color: #fff;
+}
+
+
 /* elements */
 .btn-menu {
     display: none;
