상품소개\전체상품 테이블레이아웃 조정

--- a/src/css/sub.css
+++ b/src/css/sub.css
@@ -450,6 +450,7 @@
     font-size: 16px;
     line-height: 1.3;
     color: #000;
+    table-layout: fixed;
 }
 .th-row-table th,
 .th-row-table td{
@@ -470,6 +471,7 @@
     font-size: 16px;
     line-height: 1.3;
     color: #000;
+    table-layout: fixed;
 }
 .th-col-table th,
 .th-col-table td{
