--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -281,24 +281,31 @@
 .btn-consulting::before {
     display: block;
     float: left;
-    height: 53px;
+    width: 55px;
+    height: 55px;
     margin-right: 16px;
+    border: 1px solid #c94c4c;
     border-radius: 100%;
     -webkit-box-shadow: 10px 10px 18px 0px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 10px 10px 18px 0px rgba(0, 0, 0, 0.2);
     box-shadow: 10px 10px 18px 0px rgba(0, 0, 0, 0.2);
-    content: url("../../assets/images/icon/icon-consulting.png");
+    background: #fff url("../../assets/images/icon/icon-consulting.png") no-repeat center;
+    background-size: 76%;
+    box-sizing: border-box;
+    content: "";
 }
 
 .btn-consulting {
     overflow: hidden;
+    display: flex;
+    align-items: center;
     position: fixed;
     top: 50%;
     right: 0;
     border: 0;
     color: #fff;
     height: 73px;
-    padding: 10px;
+    padding-left: 10px;
     padding-right: 20px;
     border-radius: 36px 0 0 36px;
     background: linear-gradient(90deg, #ff0000, #ed903c);
@@ -389,7 +396,7 @@
     display: none;
 }
 
-/* policy popup */
+/* text-box popup */
 .dimd {
     height: 100%;
     overflow: hidden;
@@ -428,12 +435,16 @@
     font-size: 24px;
     color: #000;
 }
-.pop-wrap .popup .policy{
+.pop-wrap .popup .text-box{
     overflow: auto;
     height: 100%;
     padding-right: 10px;
     margin-right:-27px;
     margin-bottom: 40px;
+}
+.pop-wrap .popup.short .text-box {
+    padding-right: 0;
+    margin-right: 0;
 }
 .pop-wrap .popup h3{
     margin-top: 30px;
@@ -446,6 +457,7 @@
     margin-bottom: 11px;
 }
 .pop-wrap .popup li li{
+    padding-left: 10px;
     margin-bottom: 0;
 }
 .pop-wrap .popup .btn-close-pop{
@@ -453,6 +465,7 @@
     height: 50px;
     border: 0;
     background: #000;
+    font-size: 17px;
     color: #fff;
 }
 
@@ -692,8 +705,8 @@
         width: 100%;
         height: 100%;
         background: #f7f7f7;
-        font-size: 18px;
-        line-height: 48px;
+        font-size: 20px;
+        line-height: 56px;
         font-weight: 700;
         color: #333;
         z-index: -1;
@@ -715,6 +728,11 @@
         background: url("../../assets/images/bg/bg-mgnb.png") no-repeat center;
         background-size: cover;
         content: "";
+        z-index: 10;
+    }
+    .header .gnb-top{
+        padding-top: 15px;
+        background: #fff;
     }
     .header .gnb-top > li{
         background: #fff;
@@ -723,23 +741,25 @@
         display: block;
         position: relative;
         width: 100%;
-        padding-left: 30px;
+        padding-left: 15px;
         box-sizing: border-box;
     }
     .header .gnb .has-sub::after{
         display: block;
         position: absolute;
-        top: 15px;
+        top: 18px;
         right: 15px;
-        width: 30px;
+        width: 13px;
         height: 19px;
         background: url("../../assets/images/btn/btn-menu-subtoggle.png") no-repeat center;
         background-size: contain;
         content: "";
         transition: .3s ease;
+        opacity: .6;
+        transform: rotate(-180deg);
     }
     .header .gnb .has-sub.active::after{
-        transform: rotate(-180deg);
+        transform: rotate(0);
     }
     .header .gnb .sub-depth{
         display: none;
@@ -751,11 +771,11 @@
         color: #333;
     }
     .header .gnb .sub-depth a{
-        padding-left: 54px;
+        padding-left: 25px;
     }
     .header .gnb .fnb {
         display: block;
-        padding: 20px 0;
+        padding: 60px 0 20px;
         font-size: 14px;
         font-weight: 400;
         line-height: 30px;
@@ -766,6 +786,10 @@
     }
     .header .util {
         display: none;
+    }
+
+    .btn-consulting{
+        top: 74%;
     }
 
     .footer-util{
@@ -791,8 +815,17 @@
 
 /* 저해상도 tablet 768 이하 */
 @media screen and (max-width:768px) {
+    .header{
+        height: 70px;
+    }
     .header .logo {
         padding: 0 15px;
+    }
+    .header .logo img{
+        height: 26px;
+    }
+    .header .gnb::before{
+        height: 70px;
     }
     .con-wrap{
         padding: 0 15px;
@@ -811,7 +844,7 @@
         margin-bottom: 17px;
         font-size: 20px;
     }
-    .pop-wrap .popup .policy{
+    .pop-wrap .popup .text-box{
         margin-right: 0;
         margin-bottom: 20px;
     }
