--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+
 /* layout */
 .con-wrap {
     width: 100%;
@@ -7,6 +8,7 @@
     padding: 0 40px;
     box-sizing: border-box;
 }
+
 .visual {
     position: relative;
     padding-top: 90px;
@@ -26,27 +28,32 @@
     z-index: 100;
     transition: .3s;
 }
+
 .header .logo {
     position: relative;
     width: 150px;
     height: 100%;
     padding: 0 40px;
 }
-.header .logo a{
+
+.header .logo a {
     display: block;
     width: 100%;
     height: 100%;
 }
-.header .logo span{
+
+.header .logo span {
     display: block;
     position: relative;
     width: 100%;
     height: 100%;
 }
+
 .header .logo .black {
     display: none;
 }
-.header .logo img{
+
+.header .logo img {
     display: block;
     position: absolute;
     left: 0;
@@ -55,9 +62,11 @@
     transition: opacity 1s ease;
     max-width: 100%;
 }
-.header .logo img:last-child{
+
+.header .logo img:last-child {
     opacity: 0;
 }
+
 /* header 고정 style */
 .header.fix {
     border: 0;
@@ -79,7 +88,7 @@
 }
 
 /* 가입상담신청 form */
-.aside-consulting{
+.aside-consulting {
     position: absolute;
     right: 0;
     top: 0;
@@ -87,47 +96,56 @@
     font-weight: 400;
     z-index: 10;
 }
-.aside-consulting .consulting-con{
+
+.aside-consulting .consulting-con {
     display: flex;
     flex-wrap: wrap;
     align-content: center;
     width: 443px;
     height: 100%;
-    padding:0 50px;
+    padding: 0 50px;
     box-sizing: border-box;
     background: rgba(0, 0, 0, 0.15);
     color: #fff;
 }
-.aside-consulting h2{
+
+.aside-consulting h2 {
     margin-bottom: 14px;
     font-size: 28px;
     font-weight: 400;
 }
-.aside-consulting .consulting-form{
+
+.aside-consulting .consulting-form {
     width: 100%;
     margin-bottom: 34px;
     padding-top: 11px;
 }
+
 .aside-consulting .consulting-form div {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 5px;
 }
-.aside-consulting .consulting-form input{
+
+.aside-consulting .consulting-form input {
     width: 223px;
 }
-.aside-consulting .consulting-form select{
+
+.aside-consulting .consulting-form select {
     width: 223px;
 }
+
 .aside-consulting .consulting-form .chk-agree {
     margin-bottom: 20px;
     padding-top: 5px;
     font-size: 14px;
 }
-.aside-consulting .consulting-form .chk-agree div{
+
+.aside-consulting .consulting-form .chk-agree div {
     margin-bottom: 0;
 }
+
 .aside-consulting .consulting-form .chk-agree input {
     overflow: hidden;
     position: absolute;
@@ -136,9 +154,10 @@
     margin: -1px;
     padding: 0;
     border: 0;
-    clip:rect(0, 0, 0, 0);
+    clip: rect(0, 0, 0, 0);
 }
-.aside-consulting .consulting-form .chk-agree input+label{
+
+.aside-consulting .consulting-form .chk-agree input+label {
     display: inline-block;
     position: relative;
     cursor: pointer;
@@ -146,6 +165,7 @@
     -moz-user-select: none;
     -ms-user-select: none;
 }
+
 .aside-consulting .consulting-form .chk-agree input+label:before {
     display: inline-block;
     width: 24px;
@@ -159,75 +179,92 @@
     vertical-align: middle;
     content: "";
 }
+
 .aside-consulting .consulting-form .chk-agree input:checked+label:before {
     background-image: url("../../assets/images/btn/btn-chk-on.png");
 }
+
 .aside-consulting .consulting-form .chk-agree button {
     width: 94px;
     font-size: 14px;
     font-weight: 400;
     color: #555;
 }
-.aside-consulting .consulting-list{
+
+.aside-consulting .consulting-list {
     width: 100%;
 }
-.aside-consulting .consulting-list .list{
+
+.aside-consulting .consulting-list .list {
     margin-bottom: 32px;
     text-align: center;
 }
+
 .aside-consulting .consulting-list .list-head li,
-.aside-consulting .consulting-list .list-body li{
+.aside-consulting .consulting-list .list-body li {
     display: flex;
     align-items: center;
     width: 100%;
 }
-.aside-consulting .consulting-list .list-body li{
+
+.aside-consulting .consulting-list .list-body li {
     transition: .5s ease;
 }
-.aside-consulting .consulting-list .list-body li.hide{
+
+.aside-consulting .consulting-list .list-body li.hide {
     margin-top: -26px;
-    opacity: 0;    
+    opacity: 0;
 }
-.aside-consulting .consulting-list .list em{
+
+.aside-consulting .consulting-list .list em {
     font-weight: 400;
 }
-.aside-consulting .consulting-list .list em:nth-child(1){
+
+.aside-consulting .consulting-list .list em:nth-child(1) {
     width: 25%;
     color: #fff;
     font-weight: 700;
 }
-.aside-consulting .consulting-list .list em:nth-child(2){
+
+.aside-consulting .consulting-list .list em:nth-child(2) {
     width: 40%;
 }
-.aside-consulting .consulting-list .list em:nth-child(3){
+
+.aside-consulting .consulting-list .list em:nth-child(3) {
     width: 35%;
 }
-.aside-consulting .consulting-list .list-head{
+
+.aside-consulting .consulting-list .list-head {
     background: rgba(42, 66, 94, 0.2);
     line-height: 1;
     padding: 7px 0;
     margin-bottom: 6px;
     color: #fff;
 }
-.aside-consulting .consulting-list .list-head em{
+
+.aside-consulting .consulting-list .list-head em {
     border-left: 1px solid rgba(255, 255, 255, .4);
 }
-.aside-consulting .consulting-list .list-head em:first-child{
+
+.aside-consulting .consulting-list .list-head em:first-child {
     border: 0;
     font-weight: 400;
 }
-.aside-consulting .consulting-list .list-body{
+
+.aside-consulting .consulting-list .list-body {
     overflow: hidden;
     height: 130px;
     line-height: 26px;
     color: #f1f1f1;
 }
-.aside-consulting .consulting-list .tel-list{
+
+.aside-consulting .consulting-list .tel-list {
     display: flex;
     justify-content: space-between;
     text-align: center;
 }
-.aside-consulting .consulting-list .tel-list li{
+
+.aside-consulting .consulting-list .tel-list li {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -236,21 +273,26 @@
     background: rgba(105, 105, 105, 0.6);
     color: #fff;
 }
-.aside-consulting .consulting-list .tel-list li:first-child{
+
+.aside-consulting .consulting-list .tel-list li:first-child {
     background: rgba(133, 133, 133, 0.6);
-} 
-.aside-consulting .consulting-list .tel-list em{
+}
+
+.aside-consulting .consulting-list .tel-list em {
     font-size: 15px;
 }
-.aside-consulting .consulting-list .tel-list strong{
+
+.aside-consulting .consulting-list .tel-list strong {
     font-size: 25px;
     color: #ffea5b;
 }
+
 /* 고정 form */
 .aside-consulting.fix-aside {
     display: none;
 }
-.aside-consulting.fix-aside .consulting-con{
+
+.aside-consulting.fix-aside .consulting-con {
     position: fixed;
     top: 0;
     right: 0;
@@ -263,10 +305,12 @@
     transform: translateX(100%);
     transition: .5s ease;
 }
+
 .aside-consulting.fix-aside.open .consulting-con {
     display: flex;
     transform: translateX(0);
 }
+
 .aside-consulting.fix-aside .consulting-list .list-head {
     background: #92a0ad;
 }
@@ -278,6 +322,7 @@
 .aside-consulting.fix-aside .consulting-list .list-body em:nth-child(1) {
     color: #7f7f7f;
 }
+
 .btn-consulting::before {
     display: block;
     float: left;
@@ -317,6 +362,7 @@
     -moz-box-shadow: 0px 10px 18px 0px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 10px 18px 0px rgba(0, 0, 0, 0.2);
 }
+
 .aside-consulting.open .btn-consulting {
     right: 443px;
     width: 45px;
@@ -334,6 +380,7 @@
 .footer {
     background: #10243b;
 }
+
 .footer-util {
     display: flex;
     justify-content: center;
@@ -342,36 +389,44 @@
     color: #555;
     font-size: 16px;
 }
+
 .footer-util li {
     padding: 23px 20px;
 }
+
 .footer-util li::after {
     display: inline-block;
     margin-left: 40px;
     color: #ccc;
     content: '/';
 }
-.footer-util li:last-child::after{
+
+.footer-util li:last-child::after {
     display: none;
 }
-.footer-address{
+
+.footer-address {
     font-size: 14px;
     color: #999;
 }
-.footer-address .logo{
+
+.footer-address .logo {
     display: flex;
     justify-content: center;
     align-items: flex-end;
     padding: 65px 0 41px;
 }
-.footer-address .logo img{
+
+.footer-address .logo img {
     display: block;
     padding: 0 30px;
 }
-.footer-address .logo img:first-child{
+
+.footer-address .logo img:first-child {
     border-right: 1px solid rgba(150, 150, 150, 0.3);
 }
-.footer-address .address{
+
+.footer-address .address {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -380,19 +435,23 @@
     padding-bottom: 50px;
     line-height: 1.857;
 }
-.footer-address .address span{
+
+.footer-address .address span {
     display: block;
 }
-.footer-address .address span::after{
+
+.footer-address .address span::after {
     display: inline-block;
     color: #344860;
-    padding:0 14px;
+    padding: 0 14px;
     content: "|";
 }
-.footer-address .address span:nth-child(3)::after{
+
+.footer-address .address span:nth-child(3)::after {
     display: none;
 }
-.footer-address .address span:last-child::after{
+
+.footer-address .address span:last-child::after {
     display: none;
 }
 
@@ -417,7 +476,8 @@
     transition: .3s ease;
     z-index: 200;
 }
-.pop-wrap .popup{
+
+.pop-wrap .popup {
     display: flex;
     flex-direction: column;
     width: 80%;
@@ -430,37 +490,45 @@
     line-height: 1.5;
     box-sizing: border-box;
 }
-.pop-wrap .popup h2{
+
+.pop-wrap .popup h2 {
     margin-bottom: 30px;
     font-size: 24px;
     color: #000;
 }
-.pop-wrap .popup .text-box{
+
+.pop-wrap .popup .text-box {
     overflow: auto;
     height: 100%;
     padding-right: 10px;
-    margin-right:-27px;
+    margin-right: -27px;
     margin-bottom: 40px;
 }
+
 .pop-wrap .popup.short .text-box {
     padding-right: 0;
     margin-right: 0;
 }
-.pop-wrap .popup h3{
+
+.pop-wrap .popup h3 {
     margin-top: 30px;
     font-weight: 400;
 }
-.pop-wrap .popup p{
+
+.pop-wrap .popup p {
     margin-bottom: 14px;
 }
-.pop-wrap .popup li{
+
+.pop-wrap .popup li {
     margin-bottom: 11px;
 }
-.pop-wrap .popup li li{
+
+.pop-wrap .popup li li {
     padding-left: 10px;
     margin-bottom: 0;
 }
-.pop-wrap .popup .btn-close-pop{
+
+.pop-wrap .popup .btn-close-pop {
     width: 100%;
     height: 50px;
     border: 0;
@@ -474,7 +542,8 @@
 .btn-menu {
     display: none;
 }
-.btn-red{
+
+.btn-red {
     width: 100%;
     height: 54px;
     border: 0;
@@ -484,7 +553,7 @@
 }
 
 /* pc */
-@media (min-width: 1025px){
+@media (min-width: 1025px) {
     .header .gnb {
         width: 715px;
         height: 100%;
@@ -505,6 +574,7 @@
         position: relative;
         height: 100%;
     }
+
     .header .gnb::before {
         display: block;
         position: absolute;
@@ -517,6 +587,7 @@
         transition: .3s ease;
         background: #fff;
     }
+
     .header .gnb .sub-depth {
         overflow: hidden;
         display: block;
@@ -533,9 +604,11 @@
         opacity: 0;
         transition: .3s ease .2s;
     }
-    .header .gnb .fnb{
+
+    .header .gnb .fnb {
         display: none;
     }
+
     .header .util {
         display: flex;
         height: 100%;
@@ -568,6 +641,7 @@
         background: #fff;
         color: #000;
     }
+
     .header.open .logo .white {
         display: none;
     }
@@ -575,6 +649,7 @@
     .header.open .logo .black {
         display: block;
     }
+
     .header.open .gnb::before {
         height: 286px;
         background: #fff;
@@ -593,10 +668,12 @@
         background: #ccc;
         content: "";
     }
+
     .header.open .gnb .sub-depth {
         height: auto;
         opacity: 1;
     }
+
     .header .gnb .sub-depth a:hover {
         color: #3152a0;
     }
@@ -604,30 +681,31 @@
 
 /* pc 1280 이하 */
 @media screen and (max-width: 1280px) {
-    .header .logo{
+    .header .logo {
         padding-right: 20px;
     }
+
     .header .gnb {
         width: 500px;
         padding-right: 20px;
         font-size: 18px;
     }
-    .btn-consulting{
+
+    .btn-consulting {
         right: -130px;
     }
-    .header .gnb .sub-depth{
+
+    .header .gnb .sub-depth {
         font-size: 14px;
     }
 }
 
 /* tablet 1024 이하 */
-@media screen and (max-width: 1024px){
-    .header{
-        border: 0;   
+@media screen and (max-width: 1024px) {
+    .header {
+        border: 0;
     }
-    /* .header.fix{
-        background: #fff;
-    } */
+
     .btn-menu {
         display: block;
         position: absolute;
@@ -678,25 +756,29 @@
         -webkit-animation-direction: reverse;
         animation-direction: reverse;
     }
+
     .header.active .btn-menu::before,
     .header.active .btn-menu::after,
     .header.active .btn-menu span {
         background-color: #fff;
     }
+
     .header.active .btn-menu::before {
         -webkit-animation: inT 0.8s forwards;
         animation: inT 0.8s forwards;
     }
+
     .header.active .btn-menu span {
         -webkit-animation: inM 0.8s forwards;
         animation: inM 0.8s forwards;
     }
+
     .header.active .btn-menu::after {
         -webkit-animation: inBtm 0.8s forwards;
         animation: inBtm 0.8s forwards;
     }
 
-    .header .gnb{
+    .header .gnb {
         overflow: auto;
         position: fixed;
         top: 0;
@@ -713,10 +795,12 @@
         transform: translateX(100%);
         transition: .3s ease;
     }
-    .header.active .gnb{
+
+    .header.active .gnb {
         transform: translateX(0);
     }
-    .header .gnb::before{
+
+    .header .gnb::before {
         display: block;
         position: -webkit-sticky;
         position: sticky;
@@ -730,13 +814,16 @@
         content: "";
         z-index: 10;
     }
-    .header .gnb-top{
+
+    .header .gnb-top {
         padding-top: 15px;
         background: #fff;
     }
-    .header .gnb-top > li{
+
+    .header .gnb-top>li {
         background: #fff;
     }
+
     .header .gnb a {
         display: block;
         position: relative;
@@ -744,7 +831,8 @@
         padding-left: 15px;
         box-sizing: border-box;
     }
-    .header .gnb .has-sub::after{
+
+    .header .gnb .has-sub::after {
         display: block;
         position: absolute;
         top: 18px;
@@ -758,10 +846,12 @@
         opacity: .6;
         transform: rotate(-180deg);
     }
-    .header .gnb .has-sub.active::after{
+
+    .header .gnb .has-sub.active::after {
         transform: rotate(0);
     }
-    .header .gnb .sub-depth{
+
+    .header .gnb .sub-depth {
         display: none;
         padding-bottom: 10px;
         background: #f7f7f7;
@@ -770,9 +860,11 @@
         line-height: 40px;
         color: #333;
     }
-    .header .gnb .sub-depth a{
+
+    .header .gnb .sub-depth a {
         padding-left: 25px;
     }
+
     .header .gnb .fnb {
         display: block;
         padding: 60px 0 20px;
@@ -781,69 +873,62 @@
         line-height: 30px;
         color: #999;
     }
-    .header .gnb .fnb li:first-child{
+
+    .header .gnb .fnb li:first-child {
         color: #555;
     }
+
     .header .util {
         display: none;
     }
 
-    .btn-consulting{
+    .btn-consulting {
         top: 74%;
     }
 
-    .footer-util{
+    .footer-util {
         display: none;
-    }
-    .footer-address .logo{
-        padding: 45px 0 31px;
-    }
-    .footer-address .logo img{
-        height: 26px;
-        padding: 0 20px;
-    }
-    .footer-address .address{
-        padding: 0 15px 30px;
-    }
-    .footer-address .address span::after{
-        display: none;
-    }
-    .footer-address .address span:nth-child(2)::after{
-        display: inline-block;
     }
 }
 
 /* 저해상도 tablet 768 이하 */
 @media screen and (max-width:768px) {
-    .header{
+    .header {
         height: 70px;
     }
+
     .header .logo {
         padding: 0 15px;
     }
-    .header .logo img{
+
+    .header .logo img {
         height: 26px;
     }
-    .header .gnb::before{
+
+    .header .gnb::before {
         height: 70px;
     }
-    .con-wrap{
+
+    .con-wrap {
         padding: 0 15px;
     }
-    .btn-menu{
+
+    .btn-menu {
         right: 15px;
     }
 
-    .aside-consulting.open{
+    .aside-consulting.open {
         z-index: 150;
     }
-    .aside-consulting .consulting-con{
+
+    .aside-consulting .consulting-con {
         overflow: auto;
         align-content: flex-start;
         width: 100%;
         padding: 20px 15px;
     }
-    .aside-consulting.open .btn-consulting{
+
+    .aside-consulting.open .btn-consulting {
         top: 0;
         right: 0;
         width: 59px;
@@ -853,28 +938,51 @@
         box-shadow: none;
         z-index: 10;
     }
-    .aside-consulting h2{
+
+    .aside-consulting h2 {
         font-size: 26px;
-    }
-    .aside-consulting .consulting-form form{
-        
     }
 }
 
 /* moblie 480 이하 */
-@media screen and (max-width:480px){
-    .pop-wrap .popup{
+@media screen and (max-width:480px) {
+    .pop-wrap .popup {
         padding: 30px;
     }
-    .pop-wrap .popup h2{
+
+    .pop-wrap .popup h2 {
         margin-bottom: 17px;
         font-size: 20px;
     }
-    .pop-wrap .popup .text-box{
+
+    .pop-wrap .popup .text-box {
         margin-right: 0;
         margin-bottom: 20px;
     }
-    
+
+   .footer-address .logo {
+        padding: 45px 0 31px;
+    }
+
+    .footer-address .logo img {
+        height: 26px;
+        padding: 0 20px;
+    }
+
+    .footer-address .address {
+        max-width: 350px;
+        padding: 0 15px 30px;
+        background: border-box;
+    }
+
+    .footer-address .address span::after {
+        display: none;
+    }
+
+    .footer-address .address span:nth-child(2)::after {
+        display: inline-block;
+    }
+
 }
 
 @keyframes inM {
@@ -886,6 +994,7 @@
         transform: rotate(45deg);
     }
 }
+
 @keyframes outM {
     50% {
         transform: rotate(0deg);
@@ -895,6 +1004,7 @@
         transform: rotate(45deg);
     }
 }
+
 @keyframes inT {
     0% {
         transform: translateY(0px) rotate(0deg);
@@ -908,6 +1018,7 @@
         transform: translateY(9px) rotate(135deg);
     }
 }
+
 @keyframes outT {
     0% {
         transform: translateY(0px) rotate(0deg);
@@ -921,6 +1032,7 @@
         transform: translateY(9px) rotate(135deg);
     }
 }
+
 @keyframes inBtm {
     0% {
         transform: translateY(0px) rotate(0deg);
@@ -934,6 +1046,7 @@
         transform: translateY(-9px) rotate(135deg);
     }
 }
+
 @keyframes outBtm {
     0% {
         transform: translateY(0px) rotate(0deg);
